# autoware_runtime_monitor

./: CMakeLists.txt  README.md  README_cn.md  package.xml  plugin.xml  setup.py
launch/: autoware_runtime_monitor.launch
resource/: autoware_runtime_monitor_widget.ui
scripts/: autoware_runtime_monitor
src/autoware_runtime_monitor/: autoware_runtime_monitor.py  autoware_runtime_monitor_widget.py
