<package format="3">
  <name>autoware_runtime_monitor</name>
  <version>0.5.9</version>
  <description>autoware_runtime_monitor provides a GUI plugin viewing DiagnosticsArray messages.</description>
  <maintainer email="lzs_1993@qq.com">ZhenshengLee</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ZhenshengLee/autoware_runtime_monitor</url>

  <author>ZhenshengLee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>autoware_health_checker</exec_depend>
  <exec_depend>autoware_system_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
